# connectx

./: hosts.html  index.html  main.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: hosts.ts  main.ts  styles.css
src-tauri/: Cargo.toml  hosts.csv  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
